discord_themes/project_nova/projectNova_SourrR34.css
/* ... */
.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy,
.topPill-2vcLsa .themed-qqoYp3.selected-1sf9UK.item-2GWPIy{
    border: 3px solid;
}
.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy,
.topPill-2vcLsa .themed-qqoYp3.selected-1sf9UK.item-2GWPIy:not([class*="addFriend-"]),
.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl),
.topPill-2vcLsa .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl):not([class*="addFriend-"]){
    background: hsl(var(--accent-hsl) / .1);
}
.brand-2EKq3J.item-2GWPIy:hover:not(.selected-1sf9UK),
.themed-qqoYp3.item-2GWPIy:hover:not(.selected-1sf9UK):not([class*="addFriend-"]){
    color: var(--accent);
    text-shadow: 0 0 5px;
}
/* Add Friend Pill */
.tabBar-ra-EuL [class*="addFriend-"]:hover{
    background: #0000 !important;
    border: 3px solid;
    color: var(--text-positive) !important;
}
/* SETTINGS */
/* Devices */
[class*="sessionIcon-"]{
    background: var(--accent);
    color: var(--accent-contrast);
}
/*Privacy and Safety*/
[class*="radioBar-"][style*="--radio-bar-accent-color:var(--green-360)"]{
    border-color: var(--radio-bar-green) !important;
}
[class*="radioBar-"][style*="--radio-bar-accent-color:var(--yellow-360)"]{
    border-color: var(--radio-bar-yellow) !important;
}
[class*="statusOrange-"]{
    border-color: var(--radio-bar-orange);
}
[class*="radioBar-"][style*="--radio-bar-accent-color:var(--red-400)"]{
    border-color: var(--radio-bar-red) !important;
}
[class*="selectedBackground-"]{
    background: none;
}
/* STATUS COLORS */
rect[mask="url(#svg-mask-status-online-mobile)"],
rect[mask="url(#svg-mask-status-online)"]{
    fill: var(--online);
}
rect[mask="url(#svg-mask-status-idle)"]{
    fill: var(--idle);
}
rect[mask="url(#svg-mask-status-dnd)"]{
    fill: var(--dnd);
}
rect[mask="url(#svg-mask-status-streaming)"]{
    fill: var(--streaming);
}
[aria-label*="offline" i] rect[fill="#80848e"],
rect[mask="url(#svg-mask-status-offline)"]{
    fill: var(--offline);
}
/* NUMBER BADGES */
[class*="numberBadge-"][style*="background-color: var(--status-danger)"]{
    background: var(--accent) !important;
    color: var(--accent-contrast);
}
/* BUTTONS */
[class*="lookFilled-"][class*="colorBrand-"]{
    color: var(--accent-contrast);
}
[class*="lookFilled-"][class*="colorBrand-"]:hover,
[class*="lookFilled-"][class*="colorBrand-"]:active{
    background: var(--accent-2);
}
[class*="lookFilled-"][class*="colorBrand-"]:disabled,
[class*="lookFilled-"][class*="colorBrand-"][aria-disabled="true"]{
    background: var(--accent);
}
/*voice panel action buttons*/
[class*="lookFilled-"][class*="colorBrand-"].button-1EGGcP.buttonColor-3bP3fX {
    background: var(--accent);
}
[class*="lookFilled-"][class*="colorBrand-"].button-1EGGcP.buttonColor-3bP3fX:hover {
    background: var(--accent-2);
}
/* CHANNEL HEADER */
.children-3xh0VB:after{
    content: unset;
}
.themed-Hp1KC_ .icon-2xnN2Y{
    color: var(--accent);
}
.selected-29KTGM .icon-2xnN2Y {
    filter: drop-shadow(0 0 5px)
}
.clickable-ZD7xvu:hover .icon-2xnN2Y {
    color: var(--accent-2);
}
/* Group DM Name */
.outer-1KB3kA .input-1nrc5P{
    border: 2px solid #0000;
}
.outer-1KB3kA:hover .input-1nrc5P{
    border-color: var(--accent);
}
.input-1nrc5P:focus{
    background: rgb(255,255,255,.1);
}
/* Header Search Bar */
[class*="search-"] [class*="searchBar-"]{
    border: 3px solid var(--accent);
    box-sizing: content-box;
    border-radius: 8px;
    width: 300px; /*default: 144px*/
}
[class*="search-"][class*="focused-"] [class*="searchBar-"],
[class*="search-"][class*="open-"] [class*="searchBar-"]{
    width: 350px;
}
/* SEARCH BARS */
[class*="searchBar-"] [class*="searchBarComponent-"]{
    border: 3px solid var(--accent);
    box-sizing: content-box;
    border-radius: 8px;
}
/* SEARCH RESULTS WRAP */
.searchHeader-1r_ZSh,
header.searchHeader-1r_ZSh+div{
    background: var(--background-secondary-alt); /*search results wrap background matches aside profile panel*/
}
.highlight{ /*highlighted queried text*/
    background: var(--accent);
    color: var(--accent-contrast);
}
.container-rZM65Y .buttonsContainer-Nmgy7x{
    display: flex;
    /*always show jump button*/
}
.button-cfOvv-,
.button-cfOvv-:hover{
    color: var(--accent-contrast);
}
.button-cfOvv-{
    background: var(--accent);
}
.button-cfOvv-:hover{
    background: var(--accent-2);
}
/* ANTI DUMB SHIT (work in progress) */
.root-1F1IKT,
[class^="art-"],
[class*="artContainer-"],
[class*="bannerArt-"],
[class*="backgroundImages-"],
[class*="heroBanner-"],
[class*="howItWorksImage-"],
[class*="noResultsImage-"],
[class*="perkNewsletter-"],
[class*="perkBadge-"],
[class*="perkChallenges-"],
img[class*="roleSubscription"],
[class*="sparkles-"],
[class*="upsellImage-"],
img[alt*="mallow" i],
img[alt*="graggle" i],
img[alt*="clyde" i],
img[alt*="wumpus" i]{
    display: none !important;
}
/* MISCELLANEOUS */
[class*="cardPrimary-"],
[class*="cardPrimary-"][class*="editable"]{
    border-color: var(--accent);
}
::selection{
    background: var(--accent);
    color: var(--accent-contrast);
}
.selectedIcon-122rMx circle[fill="white"]{
    fill: var(--accent-contrast);
}
/* Default Emoji in Inputs */
.sprite-2lxwfc{
    background-image: var(--home-icon);
    background-size: 22px 22px !important;
    background-position: unset !important;
    filter: none !important;
}
/* INTERACTIVE TEXT */
.wrapper-1ZcZW-{
    background: hsl(var(--accent-hsl) / .2);
    color: var(--accent);
    padding: 2px 4px;

    /*long username support*/
    display: inline-block;
    max-width: 30%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: pre;
}
.interactive:hover{
    background: var(--accent);
    color: var(--accent-contrast);
}
/* Pings */
.mentioned-Tre-dv:before{
    background: var(--accent);
    width: 2px;
}
/* QUICKSWITCHER */
[class*="quickswitcher-"]{
    border: 3px solid var(--accent);
}
[class*="quickswitcher-"] [class*="input-"]{
    border: 2px solid var(--accent);
}
/* ... */

